# prompter-day

./: .dockerignore  .env.sample  .gitignore  docker-compose.yaml  nginx.conf  pyproject.toml  server.Dockerfile
.github/workflows/: docker.yaml  server.yaml
server/: __init__.py  env.py
server/v1/: __init__.py  ai.py  db.py  login.py  session.py
